--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-  "java.project.sourcePaths": ["project\\src"],
-  "java.project.referencedLibraries": [],
+  "java.project.sourcePaths": [
+    "project\\src"
+  ],
+  "java.project.referencedLibraries": [
+    "project\\lib\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar"
+  ],
   "java.project.outputPath": "project\\classFile"
 }
