--- a/project/.vscode/settings.json
+++ b/project/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "java.project.sourcePaths": ["src"],
-    "java.project.outputPath": "bin",
+    "java.project.outputPath": "classFile",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+       "lib\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar"
     ]
 }
